[gd_scene load_steps=2 format=3 uid="uid://g85gq7bp0ck5"]

[ext_resource type="Script" path="res://Scripts/Menus/MainMenu.gd" id="1_wjjsd"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_wjjsd")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -85.5
offset_bottom = 85.5
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="NewClanButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Créer un nouveau clan"

[node name="GoToClanButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Choisir un clan existant"

[node name="OptionsButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Options
"

[node name="CreditsButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Crédits"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Quitter le jeu"
